--- a/index.html
+++ b/index.html
@@ -3,27 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Nosso grupo</title>
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <img src="Formadores.png" alt="">
-      <ul>
-        <li>Participantes</li>
-        <li>Fotos</li>
-        <li>Avaliação</li>
-      </ul>
+	      <div class="menu"> 
+	        <nav>
+	          <ul>
+	            <li> <a href="participantes.html">Participantes</a></li>
+	            <li> <a href="fotos.html">Fotos</a></li>
+	            <li> <a href="avaliacao.html">Avaliação</a></li>
+	          </ul>
+	        </nav>
+	      </div>
     </header>
+    	<div class="imagem2">
+    		<img id= "imagem" src="coding-image.png">
+    	</div>
       <div class="texto-principal" >
-        <h2>Formadores em Ação - Programação Ensino Médio</h2>
-        <img id="imagem-principal" src="coding-image.png">
+        	<h2>Formadores em Ação - Programação Ensino Médio</h2>
+        	<img id="imagem-principal" src="coding-image.png">
 
-        <h3>O grupo de <b>Estudos de Formadores em Ação</b> tem como objetivo fornecer uma formação
+        	<h3>O grupo de <b>Estudos de Formadores em Ação</b> tem como objetivo fornecer uma formação
                 continuada para os profissionais de educação da Rede Estadual</h3>
-        <p>Nós fazemos parte do <u>Edutech</u>, que é um programa que ensina alunos e alunas da rede a
+			<p>Nós fazemos parte do <u>Edutech</u>, que é um programa que ensina alunos e alunas da rede a
               aprenderem uma nova habilidade: programar!</p>
-        <p>Participantes do Grupo: Marcelo Paludetto (Alura), Olivia (Alura), Professores e professoras (SEED)</p>
-    </div>
+        	<p>Participantes do Grupo: Marcelo Paludetto (Alura), Olivia (Alura), Professores e professoras (SEED)</p>
+      </div>
 
   <div class="lista">
       <h4>Benefícios de participar do grupo de estudos</h4>
